@@ -1,3 +1,8 @@
+Tue Dec  9 12:27:54 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/validation/QualityProcedureFactory.java:
+	New class.
+
 Thu Dec  4 20:47:46 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Modify constructor
